[gd_scene load_steps=3 format=2]

[ext_resource path="res://audiosystem.gd" type="Script" id=1]
[ext_resource path="res://audio/lepido.ogg" type="AudioStream" id=2]

[node name="audiosystem" type="Node2D"]
script = ExtResource( 1 )

[node name="musicch1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="musicch2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="musicch3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfxch1" type="AudioStreamPlayer" parent="."]

[node name="sfxch2" type="AudioStreamPlayer" parent="."]

[node name="sfxch3" type="AudioStreamPlayer" parent="."]

[node name="sfxch4" type="AudioStreamPlayer" parent="."]

[node name="sfxch5" type="AudioStreamPlayer" parent="."]

[node name="sfxch6" type="AudioStreamPlayer" parent="."]

[node name="sfxch7" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="musicch1" to="." method="play_over" binds= [ 0, "mus" ]]
[connection signal="finished" from="musicch2" to="." method="play_over" binds= [ 1, "mus" ]]
[connection signal="finished" from="musicch3" to="." method="play_over" binds= [ 2, "mus" ]]
[connection signal="finished" from="sfxch1" to="." method="play_over" binds= [ 0, "sfx" ]]
[connection signal="finished" from="sfxch2" to="." method="play_over" binds= [ 1, "sfx" ]]
[connection signal="finished" from="sfxch3" to="." method="play_over" binds= [ 2, "sfx" ]]
[connection signal="finished" from="sfxch4" to="." method="play_over" binds= [ 2, "sfx" ]]
[connection signal="finished" from="sfxch5" to="." method="play_over" binds= [ 2, "sfx" ]]
[connection signal="finished" from="sfxch6" to="." method="play_over" binds= [ 2, "sfx" ]]
[connection signal="finished" from="sfxch7" to="." method="play_over" binds= [ 2, "sfx" ]]
